Gradle to Maven and some fixes in code